<resources>
    <string name="app_name">PCGenerator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply_filters">"Aplicar Filtros</string>
    <string name="change_filters">"Cambiar Filtros</string>
    <string name="applied_filters">"Filtros: "</string>
    <string name="description_new_computer">¿Para que piensa usar el equipo?</string>
    <string name="gaming">GAMING</string>
    <string name="design">DISEÑO</string>
    <string name="office">OFICINA</string>
    <string name="custom">LIBRE</string>
    <string name="title_new_computer">Nueva Computadora</string>
    <string name="title_historial">Tu historial</string>
    <string name="inicio_sesion_pantalla">Iniciar sesion</string>
    <string name="equipos_armados_pantalla">Equipos Armados</string>
    <string name="eleccion_de_componentes_pantalla">Eleccion de componentes</string>
    <string name="grafico_pantalla">Grafico</string>
    <string name="registro_pantalla">Registro</string>
    <string name="busqueda_componentes_pantalla">Busqueda de componentes</string>
</resources>