<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    tools:context=".ui.fragments.NuevaComputadoraFragment">

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/description_new_computer"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/ly_gaming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/historyitem_border"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_pc_gaming"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/mando" />

        <TextView
            android:id="@+id/tv_new_gaming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/arimo"
            android:text="@string/gaming"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_info"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="80dp"
            android:layout_weight="0"
            android:src="@drawable/image" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_progra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/historyitem_border"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_pc_progra"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/programming" />

        <TextView
            android:id="@+id/tv_new_progra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/arimo"
            android:text="@string/office"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_info5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="80dp"
            android:layout_weight="0"
            android:src="@drawable/image" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/l"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/historyitem_border"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_pc_desing"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/desing" />

        <TextView
            android:id="@+id/tv_new_design"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/arimo"
            android:text="@string/design"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_info2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="85dp"
            android:layout_weight="0"
            android:src="@drawable/image" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_office"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/historyitem_border"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_pc_office"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/office" />

        <TextView
            android:id="@+id/tv_new_office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="0"
            android:fontFamily="@font/arimo"
            android:text="@string/office"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_info3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="80dp"
            android:layout_weight="0"
            android:src="@drawable/image" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/historyitem_border"
        android:clickable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/btn_pc_custom"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="5dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/lupa" />

        <TextView
            android:id="@+id/tv_new_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_weight="0"
            android:fontFamily="@font/arimo"
            android:text="@string/custom"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_info4"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="100dp"
            android:layout_weight="0"
            android:src="@drawable/image" />
    </LinearLayout>

</LinearLayout>